# cpp-project

./: .gitignore  CMakeLists.txt  readme.md  start.sh
src/: foo.cpp  main.cpp
